# zhuomiao

./: .gitignore  CLAUDE.md  DEEP_DIAGNOSIS_v1.0.5.md  LICENSE  README.md  REFACTOR_v1.0.5.md  package-lock.json  package.json  sasdf
.codeartsdoer/specs/zhuomiao-bugfix-enhancement/: design.md  spec.md  tasks.md
.codeartsdoer/specs/zhuomiao-enhancement/: design.md  spec.md  tasks.md
.codeartsdoer/specs/zhuomiao-p0-bugfix-p1-chat/: design.md  spec.md  tasks.md
.codeartsdoer/specs/zhuomiao-phase2-sync-validation-activity/: design.md  spec.md  tasks.md
docs/: 2026-05-09-工作总结.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: default.toml
src-tauri/permissions/commands/: check_fish_detection.toml  get_active_window.toml  get_data_dir.toml  load_app_data.toml  save_app_data.toml  set_data_dir.toml  start_monitor_cycle.toml
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: activity.rs  config.rs  migration.rs  mod.rs  rule.rs  task.rs
src-tauri/src/db/: mod.rs
src/lib/components/: ActivityChart.svelte  PetAnimation.svelte  QuickChat.svelte  SettingsPanel.svelte  SpeechBubble.svelte  TaskItem.svelte  TaskPanel.svelte
src/lib/services/: ai.ts  chat.ts  persistence.ts  sync.ts
src/lib/stores/: index.ts
src/lib/types/: index.ts
src/routes/: +page.svelte
src/routes/panel/: +page.svelte
src/routes/settings/: +page.svelte
